css/portfolio.css
body, html {
    margin: 0;
    height: 100%;
    width: 100%;
    background: white;
}

/*Foundation custom column size*/
.large-fiveacross {
    width: 20%;
}
@media only screen and (max-width: 60.063em) { 
    .large-fiveacross {
	width: 50%;
    }
} 
@media only screen and (max-width: 35.063em) { 
    .large-fiveacross {
	width: 100%;
    }
} 

/* General */
.transition-slow {
    -webkit-transition: all .8s ease;
    -moz-transition: all .8s ease;
    -ms-transition: all .8s ease;
    -o-transition: all .8s ease;
    transition: all .8s ease;
}
.transition-fast {
    -webkit-transition: all .4s ease;
    -moz-transition: all .4s ease;
    -ms-transition: all .4s ease;
    -o-transition: all .4s ease;
    transition: all .4s ease;
}
.description {
    max-width: 900px;
    padding: 20px;
    margin: auto;
    background: white;
}
.description h2 {
    font-size: 30px;
    color: #666666;
}
.description p {
    color: #333;
    font-size: 1em;
    line-height: 1.7;
    text-align: justify;
}
.description p a {
    outline: none;
    text-decoration: none;
    color: #888;
}
.description p a img {
    margin-top: 10px;
    height: 40px;
}

.description p a img#linkedin {
    height: 48px;
}
.description p a img#github {
    height: 45px;
}
/* Social Buttons */
aside {
    position: fixed;
    top: 15px;
    left: -100px;
    z-index: 10;
}
@media only screen and (max-width: 46em) {
    aside {
	display: none;
    }
}
aside a img, #social a, #arrow-anchor, #arrow-ancor {
    outline: none;
}
.social-icon {
    width: 65px;
    height: auto;
    display: block;
    opacity: .5;
    -webkit-transition: all .8s ease;
    -moz-transition: all .8s ease;
    -ms-transition: all .8s ease;
    -o-transition: all .8s ease;
    transition: all .8s ease;
    margin-left: 3px;
    padding: 5px;
}
.social-icon:hover {
    opacity: 1 !important;
}
#logo {
    font-weight: 100;
    padding: 10px;
    z-index: 20;
    font-size: 1.1em;
    margin-left: -15px;
    font-family: 'Gruppo', cursive;
    margin-bottom: 10px;
}
#logo h2 {
    font-size: 3.2em;
    font-weight: 100;
    padding: 0;
    margin: 0;
    line-height: 1;
    color: #333;
}
#logo h3 {
    font-family: 'Gruppo', cursive; 
    font-size: .650em;
    font-weight: 100;
    padding: 0;
    margin: 0;
    line-height: 1;
}
#logo h2, #logo h3 {
    text-shadow:
    -1px -1px 0 #ffffff;
    1px -1px 0 #ffffff;
    -1px 1px 0 #ffffff;
    1px 1px 0 #ffffff;
}
/*Home Section*/
#home {
    position: relative;
    width: 100%;
    margin: 0;
    height: 100%;
    overflow: hidden;
    display: -webkit-box;      
    display: -moz-box;         
    display: -ms-flexbox;      
    display: -webkit-flex;     
    display: flex;
    display: -webkit-flexbox;
    display: -webkit-flex;
    -webkit-flex-align: center;
    -ms-flex-align: center;
    -webkit-align-items: center;
    align-items: center;
    justify-content: center;
}
.home-initial {
    background: #ffffff;
}
.home-after {
    background: #222;
}
.explode {
    background: transparent;
}
#initial-wrap {
    display: none;
    height: 450px;
    position: relative;
    width: 200px;
    letter-spacing: -6px;
}
#initial-d {
    left: -140px;
}
#initial-s {
    right: -140px;
}
#home h2, #home h3 {
    margin: 0;
    padding: 0;
}
#home h2 {
    color: #333333;
    font-size: 20em;
    font-weight: 100;
    font-family: 'Gruppo', cursive;
    line-height: 1;
    position: absolute;

}
#home h3 {
    font-family: 'Gruppo', cursive;
    font-size: 4.2em;
    line-height: 1;
    font-weight: 100;
    position: relative;
    top: 280px;
    color: #aaaaaa;
    left: -120px;
}
@media only screen and (max-width: 46em) {
    #initial-wrap {
	height: 200px;
	margin: auto;
	letter-spacing: -4px;
    }
    #home h2 {
	font-size: 10em;
    }
    #home h3 {
	font-size: 2.2em;
	top: 140px;
	left: -10px;
    }
    #initial-d {
	left: -20px;
    }
    #initial-s {
	right: -20px;
    }
}
/*Logo Animation*/

.animated {
  -webkit-animation-duration: 2.2s;
          animation-duration: 2.2s;
  -webkit-animation-fill-mode: both;
          animation-fill-mode: both;
}
@-webkit-keyframes bounceInRight {
  0%, 60%, 75%, 90%, 100% {
    -webkit-transition-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
            transition-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
  }

  0% {
    opacity: 0;
    -webkit-transform: translate3d(3000px, 0, 0);
            transform: translate3d(3000px, 0, 0);
  }

  60% {
    opacity: 1;
    -webkit-transform: translate3d(-25px, 0, 0);
            transform: translate3d(-25px, 0, 0);
  }

  75% {
    -webkit-transform: translate3d(10px, 0, 0);
            transform: translate3d(10px, 0, 0);
  }

  90% {
    -webkit-transform: translate3d(-5px, 0, 0);
            transform: translate3d(-5px, 0, 0);
  }

  100% {
    -webkit-transform: none;
            transform: none;
  }
}

@keyframes bounceInRight {
  0%, 60%, 75%, 90%, 100% {
    -webkit-transition-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
            transition-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
  }

  0% {
    opacity: 0;
    -webkit-transform: translate3d(3000px, 0, 0);
            transform: translate3d(3000px, 0, 0);
  }

  60% {
    opacity: 1;
    -webkit-transform: translate3d(-25px, 0, 0);
            transform: translate3d(-25px, 0, 0);
  }

  75% {
    -webkit-transform: translate3d(10px, 0, 0);
            transform: translate3d(10px, 0, 0);
  }

  90% {
    -webkit-transform: translate3d(-5px, 0, 0);
            transform: translate3d(-5px, 0, 0);
  }

  100% {
    -webkit-transform: none;
            transform: none;
  }
}

.bounceInRight {
  -webkit-animation-name: bounceInRight;
          animation-name: bounceInRight;
}
/* ... */

